--- a/res/layout/title_with_back_btn_wrap.xml
+++ b/res/layout/title_with_back_btn_wrap.xml
@@ -13,7 +13,7 @@
         android:layout_marginRight="50dp"
         android:gravity="center" >
 
-        <TextView
+        <com.zsq.document.widget.LongPressTextView
             android:id="@+id/title_with_back_title_btn_mid"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
