--- a/res/layout/title_with_back_btn_wrap.xml
+++ b/res/layout/title_with_back_btn_wrap.xml
@@ -7,7 +7,7 @@
 
     <LinearLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="fill_parent"
         android:layout_centerInParent="true"
         android:layout_marginLeft="50dp"
         android:layout_marginRight="50dp"
@@ -16,7 +16,7 @@
         <com.zsq.document.widget.LongPressTextView
             android:id="@+id/title_with_back_title_btn_mid"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="fill_parent"
             android:focusable="false"
             android:focusableInTouchMode="true"
             android:gravity="center"
